# exchange-transaction-mapper

./: .gitignore  config.yaml  plan.me  pyproject.toml
.github/: copilot-instructions.md
src/converter/: __main__.py  constants.py  mapping_engine.py  utils.py
src/converter/mappers/: coinbase.py  firi.py  kraken.py  nbx.py
src/mapper/: __main__.py
